--- a/index.html
+++ b/index.html
@@ -27,10 +27,86 @@
         </div>
 
 
-        <div class="sec-1">
+        <div class="hero">
             <div class="container">
                 <img src="./assets/cmemn.png" alt="logo" class="logo">
                 <p>Confidence in meeting your needs</p>
+            </div>
+        </div>
+
+
+        <div class="services">
+            <div class="container">
+                <h2>Services</h2>
+                <div class="service-list">
+                    <div class="list-item">
+                        <img src="https://cdn-icons-png.flaticon.com/128/879/879757.png" alt="">
+                        <h3>Sale</h3>
+                        <p>Sales of new and used construction equipment and machinery</p>
+                    </div>
+                    <div class="list-item">
+                        <img src="https://cdn-icons-png.flaticon.com/128/7911/7911145.png" alt="">
+                        <h3>Rental</h3>
+                        <p>Leasing of construction equipment and machinery</p>
+                    </div>
+                    <div class="list-item">
+                        <img src="https://cdn-icons.flaticon.com/png/128/2778/premium/2778810.png?token=exp=1657007528~hmac=29ae6c81509cb48f27a92b4c09f40297" alt="">
+                        <h3>Maintainence</h3>
+                        <p>Service and maintenance of construction machinery</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="about-us">
+            <div class="container">
+                <h2>About Us</h2>
+                <div class="section">
+                    <h3>Established in 1997</h3>
+                    <p>To satisfy the demand for construction machinery during the Singapore's construction boom</p>
+                </div>
+                <div class="section">
+                    <h3>Over 3 decade of industry experience</h3>
+                    <p>We take pleasure in being a trustworthy and knowledgeable one-stop hub for the sale, rental, service, and maintenance of construction equipment, machinery, and spare parts.</p>
+                </div>
+                <div class="section">
+                    <h3>Vision</h3>
+                    <ul>
+                        <li>To provide our customers the fullest satisfaction in the sales of equipment and services, which are backed up by our pool of professional support staff.</li>
+                        <li>Developing and maintaining long-term customer relationships
+                            We consider our customers to be our partners not just today, but also in the long run. We place our customers as priority and make sure that our industry relationships and commercial acumen affirm our services and capabilities.</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+
+
+        <div class="contact-info">
+            <h2>Company Info</h2>
+            <div class="section">
+                <img src="./assets/phone-call.png" alt="" class="icon">
+                :
+                <div class="info">+65 6564 3397</div>
+            </div>
+            <div class="section">
+                <img src="./assets/email.png" alt="" class="icon">
+                :
+                <div class="info">enquiry@cheongmachinery.com.sg</div>
+            </div>
+            <div class="section">
+                <img src="./assets/printer.png" alt="" class="icon">
+                :
+                <div class="info">+65 6565 5897</div>
+            </div>
+            <div class="section">
+                <img src="./assets/location-pin.png" alt="" class="icon">
+                :
+                <div class="info">22 Woodlands Link #01-34 Singapore 738734</div>
+            </div>
+            <div class="map">
+                <iframe class="map-frame" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.5401649431956!2d103.80947531475412!3d1.4503221989422892!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da1365c46a3d81%3A0x15e846e209809120!2sCheong%20Machinery%20Equipment!5e0!3m2!1sen!2ssg!4v1657173913596!5m2!1sen!2ssg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
 
