contact us form

--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 </head>
 <body>
     <div class="cheong-machinery">
-
-
         <div class="header">
             <img src="./assets/cmelg.png" alt="logo" class="logo">
             <div class="navbar">
@@ -113,10 +111,11 @@
 
         <div class="contact-us">
             <h3>Send us your enquiry</h3>
-            <input type="text" name="name">
-            <input type="text" name="email">
-            <input type="text" name="subject">
-            <input type="text" id="contact-us-message">
+            <input type="text" name="name" placeholder="Name">
+            <input type="text" name="email" placeholder="Email">
+            <input type="text" name="subject" placeholder="Subject">
+            <textarea id="contact-us-message" placeholder="Message"></textarea>
+            <button class="submit" type="submit" >Submit</button>
         </div>
 
 
