navbar url edits

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
             <img src="./assets/cmelg.png" alt="logo" class="logo">
             <div class="navbar">
                 <div class="container">
-                    <a href="">home</a>
-                    <a href="">about us</a>
-                    <a href="">services</a>
-                    <a href="">contact</a>
+                    <a href="#hero">home</a>
+                    <a href="#services">services</a>
+                    <a href="#about-us">About us</a>
+                    <a href="#contact-info">contact</a>
                 </div>
             </div>
         </div>
 
 
-        <div class="hero">
+        <div class="hero" id="hero">
             <div class="container">
                 <img src="./assets/cmemn.png" alt="logo" class="logo">
                 <p>Confidence in meeting your needs</p>
@@ -33,7 +33,7 @@
         </div>
 
 
-        <div class="services">
+        <div class="services" id="services">
             <div class="container">
                 <h2>Services</h2>
                 <div class="service-list">
@@ -57,7 +57,7 @@
         </div>
 
 
-        <div class="about-us">
+        <div class="about-us" id="about-us">
             <div class="container">
                 <h2>About Us</h2>
                 <div class="section">
@@ -81,7 +81,7 @@
 
 
 
-        <div class="contact-info">
+        <div class="contact-info" id="contact-info">
             <h2>Company Info</h2>
             <div class="section">
                 <img src="./assets/phone-call.png" alt="" class="icon">
@@ -109,7 +109,7 @@
         </div>
 
 
-        <div class="contact-us">
+        <div class="contact-us" id="contact-us">
             <h3>Send us your enquiry</h3>
             <input type="text" name="name" placeholder="Name">
             <input type="text" name="email" placeholder="Email">
