--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style/index.css">
+    
     <title>Cheong Machinery</title>
 </head>
 <body>
@@ -108,17 +109,28 @@
             </div>
         </div>
 
-
-        <div class="contact-us" id="contact-us">
-            <h3>Send us your enquiry</h3>
-            <input type="text" name="name" placeholder="Name">
-            <input type="text" name="email" placeholder="Email">
-            <input type="text" name="subject" placeholder="Subject">
-            <textarea id="contact-us-message" placeholder="Message"></textarea>
-            <button class="submit" type="submit" >Submit</button>
-        </div>
-
+        <form  class="gform" data-email="packirisamykaran1@gmail.com" method="post" action="https://script.google.com/macros/s/AKfycbwMCZno2rXUCI9pYa1JsBgjRYrvAlc3tvByvB7PBWWy_GNiPA2gaytXoPJOER1tk2_4Bw/exec">
+            <div class="contact-us" id="contact-us">
+                <h3>Send us your enquiry</h3>
+                <input type="text" name="name" placeholder="Name">
+                <input type="text" name="email" placeholder="Email">
+                <input type="text" name="subject" placeholder="Subject">
+                <textarea id="contact-us-message" name="message" placeholder="Message"></textarea>
+                <input type="text" id="validation" name="validation" placeholder="Which is bigger, 1 or 8?">
+                <button id="submit-btn" type="submit" >Submit</button>
+            </div>
+            <div style="display:none" class="thankyou_message">
+                <!-- You can customize the thankyou message by editing the code below -->
+                <h2><em>Thanks</em> for contacting us! We will get back to you soon!
+                </h2>
+               </div>
+        </form>
 
     </div>
+
+
+    <script src="./script.js"></script>
+    <script data-cfasync="false" type="text/javascript" src="form-submission-handler.js"></script>
+
 </body>
 </html>
