--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
             </div>
         </div>
 
+        <div class="products"  id="products">
+            <select name="product-category" id="product-category">
+            </select>
+            <div class="product-list" id="product-list">
+                <div class="item">
+                    <img src="./products/rebar bender/B-16.png" alt="">
+                    <div class="name">TSK-25</div>
+                </div>
+            </div>
+        </div>
 
         <div class="about-us" id="about-us">
             <div class="container">
@@ -129,7 +139,7 @@
     </div>
 
 
-    <script src="./script.js"></script>
+    <script type="module" src="./script.js"></script>
     <script data-cfasync="false" type="text/javascript" src="form-submission-handler.js"></script>
 
 </body>
