--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
             <select name="product-category" id="product-category">
             </select>
             <div class="product-list" id="product-list">
-                <div class="item">
+                <!-- <div class="item">
                     <img src="./products/rebar bender/B-16.png" alt="">
                     <div class="name">TSK-25</div>
-                </div>
+                </div> -->
             </div>
         </div>
 
