display item update

--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 
         <div class="displayItemDetails" id="displayItemDetails">
             <div id="close-item-detail">X</div>
+            <img  id="display-img" alt="">
+            <div class="info-container" id="info-container"></div>
         </div>
 
         <div class="products"  id="products">
