--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <div class="container">
                     <a href="#hero">home</a>
                     <a href="#services">services</a>
+                    <a href="#products">equipments</a>
                     <a href="#about-us">About us</a>
                     <a href="#contact-info">contact</a>
                 </div>
