--- a/index.html
+++ b/index.html
@@ -70,10 +70,6 @@
             <select name="product-category" id="product-category">
             </select>
             <div class="product-list" id="product-list">
-                <!-- <div class="item">
-                    <img src="./products/rebar bender/B-16.png" alt="">
-                    <div class="name">TSK-25</div>
-                </div> -->
             </div>
         </div>
 
@@ -128,7 +124,8 @@
             </div>
         </div>
 
-        <form  class="gform" data-email="packirisamykaran1@gmail.com" method="post" action="https://script.google.com/macros/s/AKfycbwMCZno2rXUCI9pYa1JsBgjRYrvAlc3tvByvB7PBWWy_GNiPA2gaytXoPJOER1tk2_4Bw/exec">
+        <!-- <form  class="gform" data-email="packirisamykaran1@gmail.com" method="post" action="https://script.google.com/macros/s/AKfycbwMCZno2rXUCI9pYa1JsBgjRYrvAlc3tvByvB7PBWWy_GNiPA2gaytXoPJOER1tk2_4Bw/exec"> -->
+            <form method="POST" action="mail.php">
             <div class="contact-us" id="contact-us">
                 <h3>Send us your enquiry</h3>
                 <input required type="text" name="name" placeholder="Name">
