--- a/index.html
+++ b/index.html
@@ -125,14 +125,14 @@
         </div>
 
         <!-- <form  class="gform" data-email="packirisamykaran1@gmail.com" method="post" action="https://script.google.com/macros/s/AKfycbwMCZno2rXUCI9pYa1JsBgjRYrvAlc3tvByvB7PBWWy_GNiPA2gaytXoPJOER1tk2_4Bw/exec"> -->
-            <form method="POST" action="mail.php">
+            <form method="POST" action="https://formspree.io/f/mwkzekpg">
             <div class="contact-us" id="contact-us">
                 <h3>Send us your enquiry</h3>
                 <input required type="text" name="name" placeholder="Name">
                 <input required type="text" name="email" placeholder="Email">
                 <input required type="text" name="subject" placeholder="Subject">
                 <textarea required id="contact-us-message" name="message" placeholder="Message"></textarea>
-                <input type="text" id="validation" name="validation" placeholder="Which is bigger, 1 or 8?">
+                <input type="text" id="validation"  placeholder="Which is bigger, 1 or 8?">
                 <button id="submit-btn" type="submit" >Submit</button>
             </div>
             <div style="display:none" class="thankyou_message">
