--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@
                 <h2>Services</h2>
                 <div class="service-list">
                     <div class="list-item">
-                        <img src="https://cdn-icons-png.flaticon.com/128/879/879757.png" alt="">
+                        <img src="./assets/sale.png" alt="">
                         <h3>Sale</h3>
                         <p>Sales of new and used construction equipment and machinery</p>
                     </div>
                     <div class="list-item">
-                        <img src="https://cdn-icons-png.flaticon.com/128/7911/7911145.png" alt="">
+                        <img src="./assets/lease.png" alt="">
                         <h3>Rental</h3>
                         <p>Leasing of construction equipment and machinery</p>
                     </div>
                     <div class="list-item">
-                        <img src="https://cdn-icons.flaticon.com/png/128/2778/premium/2778810.png?token=exp=1657007528~hmac=29ae6c81509cb48f27a92b4c09f40297" alt="">
-                        <h3>Maintainence</h3>
+                        <img src="./assets/maintenance.png`" alt="">
+                        <h3>Maintenance</h3>
                         <p>Service and maintenance of construction machinery</p>
                     </div>
                 </div>
