--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <p>Leasing of construction equipment and machinery</p>
                     </div>
                     <div class="list-item">
-                        <img src="./assets/maintenance.png`" alt="">
+                        <img src="./assets/maintenance.png" alt="">
                         <h3>Maintenance</h3>
                         <p>Service and maintenance of construction machinery</p>
                     </div>
