--- a/index.html
+++ b/index.html
@@ -13,17 +13,14 @@
 </head>
 <body>
     <div class="cheong-machinery">
-        
-        <div class="header">
-            <img src="./assets/cmelg.png" alt="logo" class="logo">
-            <div class="navbar">
-                <div class="container">
-                    <a href="#hero">home</a>
-                    <a href="#services">services</a>
-                    <a href="#products">equipments</a>
-                    <a href="#about-us">About us</a>
-                    <a href="#contact-info">contact</a>
-                </div>
+        <div><img src="./assets/cmelg.png" alt="logo" class="header-logo"></div>
+        <div class="navbar">
+            <div class="container">
+                <!-- <a href="#hero">home</a> -->
+                <a href="#services">services</a>
+                <a href="#products">equipments</a>
+                <a href="#about-us">About us</a>
+                <a href="#contact-info">contact</a>
             </div>
         </div>
 
@@ -33,8 +30,9 @@
                 <img src="./assets/cmemn.png" alt="logo" class="logo">
                 <p>Confidence in meeting your needs</p>
             </div>
+            
         </div>
-
+        <!-- <img class="hero" src="./assets/hero2.png" alt=""> -->
 
         <div class="services" id="services">
             <div class="container">
