--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </div>
 
         <!-- <form  class="gform" data-email="packirisamykaran1@gmail.com" method="post" action="https://script.google.com/macros/s/AKfycbwMCZno2rXUCI9pYa1JsBgjRYrvAlc3tvByvB7PBWWy_GNiPA2gaytXoPJOER1tk2_4Bw/exec"> -->
-            <form method="POST" action="https://formspree.io/f/mwkzekpg">
+            <form method="POST" action="https://formspree.io/f/meqdeebk">
             <div class="contact-us" id="contact-us">
                 <h3>Send us your enquiry</h3>
                 <input required type="text" name="name" placeholder="Name">
